--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -56,6 +56,94 @@ nav {
     background: transparent;
 }
 
+.modal, .modal-content, .modal-header,
+.close-modal, .modal-body, .form-group {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.modal {
+    /*display: none;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background: #efefef;
+    color: #1a1a1a;
+    margin: 35px auto;
+    width: 60%;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.25);
+}
+
+.modal-header {
+    background: #1876f2;
+    color: #fff;
+    padding: 25px 30px;
+    text-align: center;
+    font-size: 30px;
+}
+
+.close-modal {
+    font-size: 50px;
+    float: right;
+}
+
+.close-modal:hover {
+    color: #333;
+    cursor: pointer;
+}
+
+.modal-footer {
+    background: #1876f2;
+    color: #fff;
+    padding: 25px 30px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.modal-body {
+    padding: 25px 30px;
+}
+
+.form-group {
+    margin: 20px 0;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.form-group input {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    font-size: 20px;
+    width: 100%;
+}
+
+input[type='submit'] {
+    font-size: 20px;
+    margin-bottom: 30px;
+    height: 30px;
+    width: 75%;
+    margin-left: 12.5%;
+    border-radius: 40px;
+    background-color: #00AD57;
+    color: #fff;
+}
+
+input[type='submit']:hover {
+    background: #028744;
+}
+
 section {
     height: calc(100vh - 56px - 112px);
     display: flex;
